--- a/DAM_Distancia/Lenguaje_Marcas/Tema 2/formulario_hotel/styles.css
+++ b/DAM_Distancia/Lenguaje_Marcas/Tema 2/formulario_hotel/styles.css
@@ -1,60 +1,53 @@
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
-
 form {
     max-width: 600px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: whitesmoke;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 label {
     display: block;
     margin:10px 0 5px;
+    
 }
-.a{
+.a {
     width:100%;
     padding: 8px;
     margin-bottom: 10px;
     box-sizing: border-box; 
+    
 }
 input, select {
     width: 10%;
     padding: 8px;
     margin-bottom: 10px;
-    box-sizing: border-box;
+    background-color: floralwhite;
+    border-radius: 8px;
 }
 
-textarea, select {
+textarea {
     width: 100%;
     padding: 8px;
     margin-bottom: 10px;
-    box-sizing: border-box;
+    border-radius: 8px;
+    background-color: floralwhite;
 }
 
 button {
-    background-color: #4caf50;
+    background-color: green;
     color: white;
     padding: 10px 15px;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
     cursor: pointer;
 }
 
-button:hover {
-    background-color: #45a049;
+.limpiar {
+    background-color: crimson;
 }
 
-.reset-button {
-    background-color: #f44336;
-}
-
-.reset-button:hover {
-    background-color: #d32f2f;
+#dia, #mes {
+    width: 100px; 
+    text-align: center;
 }
